Fix 'person' <a> alignment.

--- a/public/style.css
+++ b/public/style.css
@@ -205,7 +205,7 @@ h2{
 				}
 
 				.person a{
-					padding-top: 20px;
+					padding-top: 35px;
 					text-decoration: none;
 					color: #000000;
 					margin: auto;
@@ -214,7 +214,7 @@ h2{
 				}
 
 				.personMM a{
-					padding-top: 20px;
+					padding-top: 35px;
 					text-decoration: none;
 					color: #FFFFFF;
 					margin: auto;
